--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "dolcetto-petshop--mari-barbara",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css":"node-sass --include-path scss scss/nuevo.scss css/quienes-somos.css " ,
-    "watch-css":"nodemon -e scss -x \"npm run build-css\"",
+    "build-css": "node-sass --include-path scss scss/nuevo.scss css/quienes-somos.css ",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +20,7 @@
   "dependencies": {
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.16"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
